[package]
name = "orom-miniquad"
version = "0.4.0"
authors = ["madwareru <madware.ru@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = """
A fork of Miniquad made specifically for the needs of Open Rage Of Mages project.
"""
readme="README.md"
keywords = ["graphics", "3D", "opengl", "gamedev", "windowing"]
categories = ["rendering::graphics-api"]

[target.'cfg(windows)'.dependencies]
sapp-windows = { path ="./native/sapp-windows", version = "=0.2.18" }

[target.'cfg(target_os = "linux")'.dependencies]
sapp-linux = { path ="./native/sapp-linux", version = "=0.1.13" }

[target.'cfg(target_os = "macos")'.dependencies]
sapp-darwin = { path = "./native/sapp-darwin", version = "=0.1.6" }
copypasta = "0.7"

[target.'cfg(not(any(target_os="linux", target_os="macos", windows)))'.dependencies]
sapp-dummy = { path ="./native/sapp-dummy", version = "=0.1.5" }

[dependencies]
egui = "0.15"
quad-url = "0.1.0"

[dev-dependencies]
glam = {version = "0.14", features = ["scalar-math"] }
quad-rand = "0.1"
